# asplos25_cinnamon_artifact

./: .gitmodules  README.md
docker/: Dockerfile
docker/scripts/: build_cinnamon.sh  entrypoint.sh  run_bootstrap_comparison.sh  run_fig7_8.sh  run_fig9_10.sh  run_keyswitch_comparison.sh  run_performance.sh
docker/simulator/: CMakeLists.txt  build_sst.sh
docker/simulator/custom-elements/: CMakeLists.txt
docker/simulator/custom-elements/cinnamon/: CMakeLists.txt
docker/simulator/custom-elements/cinnamon/src/: CPU.cc  CPU.h  baseConversionRegister.cc  baseConversionRegister.h  chiplet.cc  chiplet.h  functionalUnit.cc  functionalUnit.h  functionalunit.h  instruction.cc  instruction.h  latency.h  memoryUnit.cc  memoryUnit.h  network.cc  network.h  opcode.cc  opcode.h  physicalRegister.cc  physicalRegister.h  talosmemoryunit.h
docker/simulator/custom-elements/cinnamon/src/readers/: reader.h  talostextreader.cc  textreader.h
docker/simulator/custom-elements/cinnamon/src/utils/: allocator.h  utils.h
